Minor small code cleanups